--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,11 +6,9 @@
 #    By: rnoriko <rnoriko@student.21-school.ru>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/19 16:27:05 by rnoriko           #+#    #+#              #
-#    Updated: 2021/10/28 11:26:49 by rnoriko          ###   ########.fr        #
+#    Updated: 2021/11/14 15:44:43 by rnoriko          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
-
-INC				=	libft.h
 
 SRCS			=	ft_strdup.c  ft_strlen.c ft_strjoin.c ft_itoa.c \
 					ft_putchar.c ft_isdigit.c ft_strncmp.c
@@ -27,7 +25,7 @@ NAME			= libft.a
 
 all:			$(NAME)
 
-$(NAME):		$(OBJS) $(INC) $(HEADER)
+$(NAME):		$(OBJS) $(HEADER)
 				$(CC) $(CFLAGS) $(SRCS)
 				ar rc $(NAME) $(OBJS)
 
